# apng2mng

./: .directory  .gitignore  CMakeLists.txt  Makefile  README.md  apng2mng.cpp  apng2mng.cpp~  apng2mng.h  main.cpp  mng2apng.cpp  mngplay  mngtree  penguins.xml  test.sh
examples/mng-in-qt/: .gitignore  README.md  main.cpp  mng-in-qt.pro  qrc_res.cpp  res.qrc
lib/src/: .directory
lib/src/listener/: .directory
lib/src/spec/: .directory
lib/src/spec/priv/: .directory
src/: apng2mng.cpp  apng2mng.h  main.cpp
