CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(APNG2MNG)

INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/src)

ENABLE_TESTING()
# Generate executable file
ADD_EXECUTABLE(apng2mng
	EXCLUDE_FROM_ALL
    ${PROJECT_SOURCE_DIR}/apng2mng.cpp
)

SET_TARGET_PROPERTIES(apng2mng
	PROPERTIES OUTPUT_NAME apng2mng)

LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/./lib)
INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/./lib/src
  ${PROJECT_BINARY_DIR}/./lib/src
)
TARGET_LINK_LIBRARIES(apng2mng apngasm libmng)

ADD_TEST(
	NAME apng2mng
	COMMAND apng2mng
)

FIND_PACKAGE(ZLIB REQUIRED)
INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(apng2mng ${ZLIB_LIBRARIES})

FILE(COPY ${PROJECT_SOURCE_DIR}/penguins.apng DESTINATION ./)
FILE(MAKE_DIRECTORY ${PROJECT_BINARY_DIR}/out)
